src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --color: #080038;
    --bg-purple: #7510F7;
}

body,html {
    padding: 0;
    margin: 0;
    background-color: var(--bg);
    font-family: 'Poppins', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: var(--color);
}

* {
    box-sizing: border-box;
}

.logo {
    font-size: 2.5em;
    letter-spacing: -2px;
}

.gradient-name {
    font-weight: 100;
}

.gradient-name .c-letter {
    display: inline-block;
    background: var(--color);
    color: white;
    font-weight: bold;
    height: 40px;
    width: 40px;
    line-height: 40px;
    text-align: center;
    border-radius: 50px;
}

.title {
    font-size: 40px;
    font-weight: 700;
}

.menu-links {
    width: 300px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background: #141c3a;
    border-radius: 50px;
    padding: 2px;
}

.menu-link {
    padding: 5px 10px;
    text-decoration: none;
    font-weight: 500;
    font-size: 14px;
    transition: .25s ease-in-out;
    cursor: pointer;
    border-radius: 5px;
    color:white;

}

.menu-link.contact {
    background: var(--bg-purple);
    border-radius: 50px;
}

.menu-link:hover {
    background: white;
    border-radius: 50px;
    color:var(--color);
}

.main-container {
    padding: 15px 30px;
}

.bg-container {
    background: var(--bg-purple);
    padding-top: 100px;
    padding-bottom: 100px;
}

.menu-content {
    max-width: 1080px;
    align-items: center;
    margin: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 50px;
}

.about-content {
    margin: 140px auto;
    max-width: 1080px;
    line-height: 55px;
    font-size: 40px;
}

.education-content {
    margin: 100px auto;
    max-width: 1080px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.skills-content {
    max-width: 1080px;
    margin: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: center;
}

.contact-content {
    max-width: 1080px;
    margin: auto;
    color: white;
}

.contact-desc {
    padding: 20px 0px;
}

.contact-desc .mail {
    font-weight:bold;
}

.education-grad-hat {
    width: 400px;
    margin: 0px auto -165px;
    display: flex;
}

.education-title {
    text-align: center;
}

.education-desc {
    margin-bottom: 80px;
}

.desc {
    font-size: 22px;
}

.education-item {
    background: white;
    -webkit-box-shadow: 4px 12px 40px 6px rgb(0 0 0 / 9%);
    box-shadow: 4px 12px 40px 6px rgb(0 0 0 / 9%);
    padding: 20px;
    border-radius: 10px;
    margin: 30px 0px;
}

.education-hole-gradhat {
    width: 35px;
    height: 35px;
    border-radius: 50px;
    margin: -38px auto 0px;
    background: var(--color);
    text-align: center;
    line-height: 35px;
}

.education-hole-gradhat img {
    height: 25px;
    width: 25px;
    text-align: center;
    vertical-align: middle;
    margin-top: -2px;
}

.education-item-name {
    font-style: italic;
    color: grey;
}

.education-item-date {
    font-size: 12px;
    text-align:right;
}

.skills-content-image {
    width: 440px;
    z-index:1;
    border-radius: 10px;
    box-shadow: 4px 12px 40px 6px rgb(0 0 0 / 9%);
    border: 5px solid white;
}

.skills-content-stack-skelet {
    position: relative;
    z-index: 1;
}

.skills-content-stack-skelet::after, .skills-content-stack-skelet::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 10px;
    z-index: -1;
    background:#0d0d10;
    border-radius: 10px;
    box-shadow: 4px 12px 40px 6px rgb(0 0 0 / 9%);
    border: 5px solid white;
}

.skills-content-stack-skelet::after {
    transform: translate(6px,6px) rotate(3deg);
}

.skills-content-stack-skelet::before {
    transform: translate(0,0) rotate(-3deg);
}

.skills-body {
    color: white;
}

.skills-body-title {
    font-size: 30px;
    margin-bottom: 20px;
}

.skills-body-list {
    max-width: 500px;
}

.skills-body-list ul {
    display: grid;
    grid-template-columns: repeat(auto-fill,minmax(160px, 1fr));
    width: 100%;
    height: 100%;
    justify-content: space-around;
    padding-left: 0;
    margin: 0;
}

.skills-body-list ul li {
    list-style: none;
    padding: 5px 0px;
    display: -moz-box;
    display: flex;
    -moz-box-align: center;
    align-items: center;
    font-size: 16px;
    width: 100%;
    height: 100%;
    white-space: nowrap;
    max-height: 50px;
}

.skills-body-list ul li img {
    vertical-align: middle;
    height: 30px;
    margin-right: 5px;
}

.contact-item {
    display: flex; 
    padding: 5px 0;
}

.contact-item img {
    margin-right: 10px;
}

.contact-item a {
    display: flex;
    text-decoration: none;
    color: white;
}

@media screen and (max-width: 550px) {
    .title {
        font-weight: 600;
        font-size: 25px;
    }

    .about-content {
        margin: 80px auto;
        line-height: 31px;
        font-size: 25px;
    }

    .menu-content {
        flex-direction: column;
        border-bottom: none;
    }

    .skills-content-image {
        width: 300px;
    }

    .desc {
        font-size: 20px;
    }
}

@media screen and (max-width: 950px) {
    .skills-content {
        flex-direction: column;
    }

    .skills-content-stack-skelet {
        margin-bottom: 40px;
    }
}

